--- a/src/main/resources/templates/fragments/header.html
+++ b/src/main/resources/templates/fragments/header.html
@@ -1,5 +1,7 @@
 <!DOCTYPE html>
-<html xmlns:th="http://www.thymeleaf.org">
+<html xmlns:th="http://www.thymeleaf.org"
+      xmlns:sec="http://www.thymeleaf.org/extras/spring-security">
+
 <body>
 <header th:fragment="header">
   <div class="header-container">
@@ -7,13 +9,23 @@
       <a th:href="@{/study-mate/main}" style="text-decoration: none; color: inherit;">Study-Mate</a>
     </div>
     <div class="nav-links">
-      <a th:href="@{/study-mate/myclass}">내 강의실</a>
-      <a th:href="@{/study-mate/search-page}">과목 찾기</a>
-      <a th:href="@{/paid.html}">유료 서비스</a>
-      <form th:action="@{/logout}" method="post">
-        <button type="submit">로그아웃</button>
-      </form>
+      <!-- 로그인 상태일 때만 보이는 링크들 -->
+      <th:block sec:authorize="isAuthenticated()">
+        <a th:href="@{/study-mate/myclass}">내 강의실</a>
+        <a th:href="@{/study-mate/search-page}">클래스 찾기</a>
+        <a th:href="@{/study-mate/paid}" class="premium-link">
+          <i class="fas fa-crown"></i> Premium
+        </a>
+        <form th:action="@{/study-mate/auth/logout}" method="post">
+          <button type="submit">로그아웃</button>
+        </form>
+      </th:block>
+      <!-- 비로그인 상태일 때 보이는 링크들 -->
+      <th:block sec:authorize="!isAuthenticated()">
+        <a th:href="@{/study-mate/auth/login}">로그인</a>
+      </th:block>
     </div>
+
   </div>
 </header>
 </body>
